fix: Center Place cards on small screens (Android 6) * Remove min-width on place-card__list-item * Adjust .wrapper--homepage padding

--- a/assets/styles/_grid.scss
+++ b/assets/styles/_grid.scss
@@ -30,7 +30,7 @@
     text-align: center;
   }
   &::after {
-    content: "";
+    content: '';
     display: table;
     clear: both;
   }
@@ -38,7 +38,6 @@
     list-style: none;
     vertical-align: top;
     margin: 2em auto;
-    min-width: 18em;
     width: 23em;
     max-width: 100%;
     @media (min-width: $bp-small-screen) {
@@ -48,6 +47,7 @@
       // use inline-block for browsers and devices that do not support flexbox
       display: inline-block;
       max-width: 32%;
+      min-width: 18em;
     }
     &.hidden {
       display: none;
