--- a/assets/styles/_homepage.scss
+++ b/assets/styles/_homepage.scss
@@ -1,4 +1,4 @@
 .wrapper--homepage {
   background-color: $color-sparkblue-light;
-  padding: 2rem;
+  padding: 2rem 1rem;
 }
